[tool.poetry]
name = "knn_recommender"
version = "0.1.0"
description = ""
authors = ["Cheukting <cheukting.ho@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "^1.4.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
